--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,17 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?><!-- Layout for the list of events -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.GameListFragment">
+    tools:context="com.my.game.wesport.fragment.DashboardFragment">
+
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/event_recyclerView"
+        android:id="@+id/dashboard_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:padding="@dimen/game_list_item_space" />
 
-    <!-- Empty view for the list -->
     <RelativeLayout
         android:id="@+id/empty_view"
         android:layout_width="wrap_content"
@@ -20,33 +20,31 @@
 
         <ImageView
             android:id="@+id/empty_shelter_image"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:contentDescription="@string/accessibility_emptygame"
-            android:src="@drawable/ic_add_event" />
+            android:src="@drawable/ic_empty_game" />
 
         <TextView
-
             android:id="@+id/empty_title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/empty_shelter_image"
             android:layout_centerHorizontal="true"
             android:fontFamily="sans-serif-medium"
-            android:text="@string/add_upcoming_event"
+            android:text="@string/empty_view_title_text"
             android:textAppearance="?android:textAppearanceMedium" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/empty_title_text"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="sans-serif"
+            android:paddingBottom="8dp"
+            android:text="@string/empty_view_subtitle_text"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textColor="#A2AAB0" />
     </RelativeLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/event_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add_circle_black_24dp"
-        app:pressedTranslationZ="12dp"
-        tools:ignore="RtlHardcoded" />
 </RelativeLayout>
