--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_margin"
-    tools:context=".GameEditActivity">
+    tools:context=".activity.GameEditActivity">
 
     <!-- Overview Games -->
     <LinearLayout
