--- a/app/src/main/res/layout/activity_fullscreen_image.xml
+++ b/app/src/main/res/layout/activity_fullscreen_image.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#000000"
+        android:background="#bb000000"
         tools:activity="com.mobipier.amoureuse.activity.FullscreenImageActivity">
 
         <android.support.v4.view.ViewPager
