--- a/app/src/main/res/layout/activity_invites.xml
+++ b/app/src/main/res/layout/activity_invites.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.my.game.wesport.ui.MyGamesActivity">
+    tools:context="com.my.game.wesport.activity.InvitesActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -24,14 +24,15 @@
         </android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/group_activity_tabs"
+            android:id="@+id/tab_layout"
+            app:tabMode="fixed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/group_activity_container"
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
