--- a/app/src/main/res/layout/fragment_game_list.xml
+++ b/app/src/main/res/layout/fragment_game_list.xml
@@ -6,9 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".GameListFragment">
+    tools:context=".fragment.GameListFragment">
 
     <android.support.v7.widget.RecyclerView
+        android:clipToPadding="false"
+        android:padding="@dimen/game_list_item_space"
         android:id="@+id/game_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
