--- a/app/src/main/res/menu/menu_catalog.xml
+++ b/app/src/main/res/menu/menu_catalog.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".GameListFragment">
+    tools:context=".fragment.GameListFragment">
 
     <item
         android:id="@+id/action_delete_all_entries"
         android:title="@string/action_delete_all_entries"
         app:showAsAction="never" />
-    <item
+    <!--<item
         android:id="@+id/action_signout"
         android:title="@string/email_signout"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
 </menu>
