--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -62,4 +62,6 @@
         <dimen name="profile_height">75dp</dimen>
     <dimen name="thickness">5dp</dimen>
     <dimen name="grid_image_space">2dp</dimen>
+
+    <dimen name="game_list_item_space">5dp</dimen>
 </resources>
