--- a/app/src/main/res/drawable/other_user_profile_shape.xml
+++ b/app/src/main/res/drawable/other_user_profile_shape.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle"   >
 
     <solid
-        android:color="#fff" >
+        android:color="#EEEEEE" >
     </solid>
 
     <stroke
