--- a/app/src/main/res/layout/activity_list_users.xml
+++ b/app/src/main/res/layout/activity_list_users.xml
@@ -2,7 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FAFAFA">
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_users"
@@ -14,14 +16,15 @@
         android:id="@+id/empty_view_team_members"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:visibility="gone"
         tools:visibility="visible">
 
         <ImageView
             android:id="@+id/empty_shelter_image"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:contentDescription="@string/accessibility_emptygame"
             android:src="@drawable/ic_team_members" />
@@ -32,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/empty_shelter_image"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
             android:fontFamily="sans-serif-medium"
             android:text="@string/team_members"
             android:textAppearance="?android:textAppearanceMedium" />
