--- a/app/src/main/res/layout/activity_other_user_profile.xml
+++ b/app/src/main/res/layout/activity_other_user_profile.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/image_placeholder_drawable"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/image_placeholder_drawable" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,14 +21,14 @@
         android:layout_marginBottom="30sp"
         android:layout_marginLeft="12sp"
         android:layout_marginRight="12sp"
-        android:layout_marginTop="100sp">
+        android:layout_marginTop="100sp"
+        android:background="@drawable/other_user_profile_shape">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@drawable/other_user_profile_shape"
             android:orientation="vertical">
 
             <LinearLayout
@@ -38,8 +38,8 @@
 
                 <ImageView
                     android:id="@+id/other_user_profile_image"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     android:layout_margin="15sp"
                     android:background="@drawable/profile" />
 
@@ -77,7 +77,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="110sp"
+                    android:layout_marginLeft="100sp"
                     android:layout_marginTop="20sp"
                     android:text="EMAIL"
                     android:textColor="#706e6e"
@@ -88,7 +88,7 @@
                     android:id="@+id/other_user_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="110sp"
+                    android:layout_marginLeft="100sp"
                     android:layout_marginTop="3sp"
                     android:textColor="#000"
                     android:textSize="15sp"
@@ -100,7 +100,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginLeft="110sp"
+                android:layout_marginLeft="100sp"
                 android:layout_marginRight="20sp"
                 android:layout_marginTop="15sp"
                 android:background="#a2a2a2" />
@@ -114,7 +114,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="110sp"
+                    android:layout_marginLeft="100sp"
                     android:layout_marginTop="20sp"
                     android:text="BIO"
                     android:textColor="#706e6e"
@@ -125,7 +125,7 @@
                     android:id="@+id/other_user_bio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="110sp"
+                    android:layout_marginLeft="100sp"
                     android:layout_marginTop="3sp"
                     android:hint="User has no bio..."
                     android:textColor="#000"
@@ -136,19 +136,19 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginLeft="110sp"
+                android:layout_marginLeft="100sp"
                 android:layout_marginRight="20sp"
                 android:layout_marginTop="15sp"
                 android:background="#a2a2a2" />
 
 
             <TextView
-                android:foreground="?android:selectableItemBackground"
                 android:id="@+id/delete_other_user_from_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="110dp"
+                android:layout_marginLeft="100dp"
                 android:clickable="true"
+                android:foreground="?android:selectableItemBackground"
                 android:onClick="onRemoveUserClick"
                 android:paddingBottom="16dp"
                 android:paddingTop="16dp"
@@ -163,7 +163,7 @@
                 android:layout_height="1dp"
                 android:layout_marginLeft="20sp"
                 android:layout_marginRight="20sp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:background="#a2a2a2" />
 
         </LinearLayout>
