--- a/app/src/main/res/layout/activity_profile_user.xml
+++ b/app/src/main/res/layout/activity_profile_user.xml
@@ -1,171 +1,197 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-    <android.support.design.widget.AppBarLayout
-
-        android:id="@+id/app_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleTextAppearance="@color/transparent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:clickable="true"
-                    android:onClick="onCoverImageClick"
-                    android:scaleType="centerCrop"
-                    android:id="@+id/user_profile_cover_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/image_placeholder_drawable"
-                    app:layout_collapseMode="parallax" />
-
-            </FrameLayout>
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/user_profile_image"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="50dp"
-                    android:layout_marginTop="50dp"
-                    android:src="@drawable/profile"
-                    app:layout_collapseMode="parallax" />
-
-
-            </FrameLayout>
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
+    android:background="#fff"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="com.my.game.wesport.activity.UserProfileActivity"
-        tools:showIn="@layout/activity_profile_user">
+        tools:showIn="@layout/activity_profile_user"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    <FrameLayout
+        android:clickable="true"
+        android:onClick="onCoverImageClick"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <ImageView
+        android:scaleType="centerCrop"
+        android:id="@+id/user_profile_cover_image"
+        android:layout_width="match_parent"
+        android:layout_height="210dp"
+        android:src="@drawable/image_placeholder_drawable" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="30dp">
+            android:layout_marginRight="2dp"
+            android:layout_marginLeft="2dp"
+            android:background="@drawable/profile_edit_button_background_shape"
+            android:layout_gravity="end|bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:textStyle="bold"
-                    android:textSize="17sp"
-                    android:id="@+id/text_email"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Email"
-                    android:textColor="#000" />
-
-                <TextView
-                    android:textSize="17sp"
-                    android:textColor="#30d338"
-                    android:text="Your Email"
-                    android:layout_marginLeft="25sp"
-                    android:id="@+id/email_user_profile"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/text_email"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20sp">
-
-                <TextView
-                    android:textStyle="bold"
-                    android:textSize="17sp"
-                    android:paddingTop="10dp"
-                    android:id="@+id/text_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Name"
-                    android:textColor="#000" />
-
-                <EditText
-                    android:enabled="false"
-                    android:hint="Your Name"
-                    android:textSize="17sp"
-                    android:textColor="#30d338"
-                    android:layout_marginLeft="15sp"
-                    android:id="@+id/edit_user_profile_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/text_name"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10sp">
-
-                <TextView
-                    android:textStyle="bold"
-                    android:textSize="17sp"
-                    android:id="@+id/text_bio"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Bio"
-                    android:paddingTop="10dp"
-                    android:textColor="#000" />
-
-                <EditText
-                    android:enabled="false"
-                    android:hint="Your Bio"
-                    android:textSize="17sp"
-                    android:textColor="#30d338"
-                    android:layout_marginLeft="38sp"
-                    android:id="@+id/user_bio"
-                    android:inputType="textMultiLine"
-                    android:maxLines="5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/text_bio"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true" />
-            </RelativeLayout>
+            <ImageView
+                android:layout_margin="2dp"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:src="@drawable/ic_camera_alt_black_24dp"/>
+            <TextView
+                android:layout_margin="2dp"
+                android:textStyle="bold"
+                android:textColor="#000"
+                android:textSize="17sp"
+                android:text="Edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
+    </FrameLayout>
+
+<FrameLayout
+    android:clickable="true"
+    android:onClick="onProfileImageClick"
+    android:id="@+id/fr"
+    android:layout_marginTop="161dp"
+    android:layout_alignParentTop="true"
+    android:layout_centerHorizontal="true"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:background="@drawable/other_user_profile_shape"
+        android:id="@+id/user_profile_image"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_gravity="bottom|center"
+        android:src="@drawable/profile" />
+
+    <LinearLayout
+        android:layout_marginRight="2dp"
+        android:layout_marginLeft="2dp"
+        android:background="@drawable/profile_edit_button_background_shape"
+        android:layout_gravity="end|bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_margin="2dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_camera_alt_black_24dp"/>
+        <TextView
+            android:layout_margin="2dp"
+            android:textStyle="bold"
+            android:textColor="#000"
+            android:textSize="15sp"
+            android:text="Edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+</FrameLayout>
+
+    <FrameLayout
+        android:clickable="true"
+        android:onClick="onClickChangeUserName"
+        android:id="@+id/fr2"
+        android:layout_marginTop="18sp"
+        android:layout_below="@+id/fr"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ImageView
+                android:layout_gravity="end"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:src="@drawable/ic_edit_24dp"/>
+
+        <TextView
+            android:id="@+id/edit_user_profile_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:hint="Enter Your Name"
+            android:textColor="#000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/ll"
+        android:orientation="vertical"
+        android:layout_marginTop="10sp"
+        android:layout_below="@+id/fr2"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:id="@+id/text_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email"
+            android:textColor="#000" />
+
+        <TextView
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:textColor="#30d338"
+            tools:text="abdulblue007@gamil.com"
+            android:id="@+id/email_user_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+
+
+        <FrameLayout
+            android:layout_centerInParent="true"
+            android:layout_below="@+id/ll"
+            android:layout_marginTop="10sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:onClick="onClickChangeProfileBio">
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="end"
+                android:src="@drawable/ic_edit_24dp" />
+
+            <TextView
+                android:id="@+id/user_bio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:hint="Enter Your Bio"
+                android:maxLines="3"
+                android:textColor="#30d338"
+                android:textSize="17sp"
+                android:textStyle="bold"/>
+        </FrameLayout>
+        </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
-</android.support.design.widget.CoordinatorLayout>
+
+    </RelativeLayout>
