--- a/app/src/main/res/layout/chat_username.xml
+++ b/app/src/main/res/layout/chat_username.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/username"
-            android:background="?attr/colorPrimary"
-            android:textColor="@color/white"
-            android:fontFamily ="sans-serif-light"
-            android:textAppearance="?android:textAppearanceLarge"
-            android:textSize = "24sp"
-            android:paddingTop="8dp"
-            android:gravity="start"/>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center_vertical"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:clickable="true"
+        android:onClick="onActionBarImageCLick"
+        android:src="@drawable/profile"
+        android:id="@+id/user_profile_image_chat_activity"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center_vertical" />
+
+    <TextView
+        android:id="@+id/username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:fontFamily="sans-serif-light"
+        android:gravity="start"
+        android:paddingTop="8dp"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:textColor="@color/white"
+        android:textSize="24sp" />
 </LinearLayout>
