--- a/app/src/main/res/layout/custom_info_content.xml
+++ b/app/src/main/res/layout/custom_info_content.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="90dp"
     android:background="@color/white"
     android:baselineAligned="false"
     android:orientation="horizontal"
     tools:ignore="Overdraw">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
+        android:gravity="center_vertical"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -61,9 +63,10 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:layout_margin="5dp"
             android:id="@+id/place_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_weight="0.4"
             android:adjustViewBounds="true"
             android:contentDescription="@string/accessibility_place"
