--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <group android:id="@+id/group1" android:checkableBehavior="single">
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_account_circle_black_24dp"
             android:title="@string/profile" />
-        <item
-            android:id="@+id/nav_invite_friends"
-            android:icon="@drawable/ic_action_invite_friends"
-            android:title="@string/invite_friends" />
+
         <item
             android:id="@+id/nav_invites"
             android:icon="@drawable/ic_group_work_black_24dp"
-            android:title="Invites" />
+            app:actionViewClass="android.widget.TextView"
+            android:title="Game Invites" />
 
         <item
             android:id="@+id/nav_nearby_users"
@@ -23,6 +22,13 @@
             android:id="@+id/nav_dashboard"
             android:icon="@drawable/ic_dashboard_black_24dp"
             android:title="My Games" />
+
+        <item
+            android:id="@+id/nav_invite_friends"
+            android:icon="@drawable/ic_action_invite_friends"
+            android:title="Invite Friends to App"
+            app:actionViewClass="android.widget.ImageView"
+            />
     </group>
 
     <group android:id="@+id/group2">
